--- a/coda/src/styles/app.sass
+++ b/coda/src/styles/app.sass
@@ -1,6 +1,5 @@
 .app
   text-align: center
-  min-height: 100vh
   align-items: center
   justify-content: center
-  font-size: calc(10px + 2vmin)
+  font-size: 3vh
