--- a/coda/src/styles/command.sass
+++ b/coda/src/styles/command.sass
@@ -38,3 +38,10 @@ $command_margin: 0 #{$base_padding}px
 
 .button
   cursor: pointer
+
+.visible
+  visibility: visible
+
+.hidden
+  visibility: hidden
+  display: none
