Added support for optional arguments

--- a/coda/src/styles/command.sass
+++ b/coda/src/styles/command.sass
@@ -34,6 +34,9 @@ $command_margin: 0 #{$base_padding}px
     border-radius: #{$border_radius}px
     cursor: pointer
 
+    &.optional
+      border-style: dashed
+
     &:hover
       padding: $command_padding_active
       border: 0
