Updated styles - set larger top padding for command pieces

--- a/coda/src/styles/app.sass
+++ b/coda/src/styles/app.sass
@@ -1,5 +1,9 @@
+$base_font_size: 1 // vh
+
+$main_font_size: $base_font_size * 3
+
 .app
   text-align: center
   align-items: center
   justify-content: center
-  font-size: 3vh
+  font-size: #{$main_font_size}vh
