Added support of short names for option and flag

--- a/coda/src/styles/command.sass
+++ b/coda/src/styles/command.sass
@@ -84,3 +84,6 @@ $command_margin: 0 #{$base_padding}px
   font-size: #{app.$base_font_size}vh
   right: #{$border_thickness}px
   top: 0
+
+label
+  font-size: #{app.$base_font_size * 2}vh
