Minor changes - updated button style, updated readme and demo

--- a/coda/src/styles/command.sass
+++ b/coda/src/styles/command.sass
@@ -38,6 +38,9 @@ $command_margin: 0 #{$base_padding}px
 
   @include app.text_config()
 
+.button
+  @include app.text_config()
+
 .command
   &.argument, &.option, &.flag, &.fragment, &.operator
     &:not(.operator)
